# feos-ad

./: CHANGELOG.md  Cargo.toml  README.md  license-mit
src/: joback.rs  lib.rs  orc.rs  pcsaft.rs  python.rs  state.rs
src/core/: mod.rs  phase_equilibria.rs  state.rs  total.rs
src/eos/: gc_pcsaft.rs  ideal_gas.rs  mod.rs
src/eos/pcsaft/: mod.rs  pcsaft_binary.rs  pcsaft_pure.rs
src/parameter_fit/: mod.rs
