[package]
name = "feos-ad"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "FeOs-AD - Implicit automatic differentiation of equations of state and phase equilibria."
homepage = "https://github.com/feos-org"
repository = "https://github.com/feos-org/feos-ad"
keywords = [
    "thermodynamics",
    "equations_of_state",
    "phase_equilibria",
    "automatic_differentiation",
]
categories = ["science"]

[dependencies]
num-dual = "0.11"
quantity = { version = "0.10", features = ["num-dual"] }
nalgebra = "0.33"
feos-core = "0.8"
ndarray = "0.16"

[dev-dependencies]
feos = { version = "0.8", features = ["pcsaft", "gc_pcsaft"] }
approx = "0.5"

[features]
default = []
parameter_fit = []
